--- a/IrfanHassan/Sprint5_irfan/requirements.txt
+++ b/IrfanHassan/Sprint5_irfan/requirements.txt
@@ -19,6 +19,8 @@ aws-cdk.aws_apigateway==1.135.0
 aws-cdk.aws_amplify==1.135.0
 aws-cdk.aws_codebuild==1.135.0
 aws-cdk.aws_s3_assets==1.135.0
+aws-cdk.aws_ecs==1.135.0
+aws-cdk.aws_ecr==1.135.0
 pytest
 boto3
 requests
