--- a/Adeel/Sprint5/AdeelProject5/requirements.txt
+++ b/Adeel/Sprint5/AdeelProject5/requirements.txt
@@ -14,6 +14,9 @@ aws-cdk.aws_apigateway==1.135.0
 aws-cdk.aws_lambda_event_sources==1.135.0
 aws-cdk.aws_s3 == 1.135.0
 aws-cdk.aws_iam == 1.135.0
+aws-cdk.aws_ecr == 1.135.0
+aws-cdk.aws_ecs == 1.135.0
+aws-cdk.aws_ec2 == 1.135.0
 boto3 
 pytest
 requests
